added meta tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
+    <meta name="description" content="Bicycle and motorcyle repair services in Clevedon">
+    <meta name="keywords" content="bike, bicycle, bicycle repair, bike repair, clevedon, portishead, yatton, nailsea, motorcycle, motorbike">
+    <meta name="author" content="Loz Procter Pedal and Piston">
 </head>
 <body>
     <header>
