--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Pedal and Piston</title>
-    <link rel="icon" type="image/x-icon" href="imgs/Pedal_and_Piston_Logo_Colour_No_Background.ico">
+    <link rel="icon" type="image/x-icon" href="imgs/Pedal_&_Piston_Logo_Round_Background_100px.ico">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div>
-        <a class="img_link" href="index.html"><img id="logo" src="imgs/Pedal_and_Piston_Logo_Colour_Square.png" alt="Pedal and Piston logo"></a>
+        <a class="img_link" href="index.html"><img id="logo" src="imgs/Pedal_&_Piston_Logo_Square_Background.png" alt="Pedal and Piston logo"></a>
         </div>
         <div>
         <ul id="navbar">
