--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
-    <meta name="description" content="Bicycle and motorcyle repair services in Clevedon">
-    <meta name="keywords" content="bike, bicycle, bicycle repair, bike repair, clevedon, portishead, yatton, nailsea, motorcycle, motorbike">
+    <meta name="description" content="Bicycle repair services in Clevedon">
+    <meta name="keywords" content="bike, bicycle, bicycle repair, bike repair, clevedon, portishead, yatton, nailsea">
     <meta name="author" content="Loz Procter Pedal and Piston">
 </head>
 <body>
@@ -27,7 +27,7 @@
         <div id="hero">
             <div id="hero_bg"></div>
             <div id="hero_content">
-                <h2 id="hero_text">Welcome to Pedal & Piston, we are a local bicycle and motorcycle repair shop serving Clevedon and surrounding areas</h2>
+                <h2 id="hero_text">Welcome to Pedal & Piston, we are a local bicycle repair shop serving Clevedon and surrounding areas</h2>
                 <a class="book_button" href="#contact_page">Book now</a>
             </div>
         </div>
